# Painters

./: CMakeLists.txt  Painters_zh_CN.ts  README.md  about_window.cpp  about_window.h  about_window.ui  icon_bind.qrc  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
Core/: CMakeLists.txt  core_base.h
Core/include/: color_maintain.h  file_system.h  log_system.h
Core/src/: color_maintain.cpp  file_system.cpp  log_system.cpp
Editor/: CMakeLists.txt
Editor/include/: p_inspector.h
Editor/src/: p_inspector.cpp
mWidget/: CMakeLists.txt
mWidget/include/: P_CanvasWidget.h  P_GraphicViewport.h  P_RulerWidget.h  P_component.h  P_layer_manage.h
mWidget/src/: P_CanvasWidget.cpp  P_GraphicViewport.cpp  P_RulerWidget.cpp  P_component.cpp  P_layer_manage.cpp
test_samples/: brush_test.projectp  head_test.projectp  pixmap_test.projectp  re-save.projectp  shape_type_test.projectp  test.projectp  text_cn_test.projectp  text_en_emoji_test.projectp
